Fix T52522: VSE renders with alpha transparent PNG image incorrectly

Need some extra checks and should be probably end up in 2.79 since that's a regression.